--- a/examples/click-and-hover/index.html
+++ b/examples/click-and-hover/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>soda example - single track rectangles</title>
-    <script src="d3.js"></script>
+    <script src="../d3.js"></script>
     <style type="text/css">
 	    form  { display: table;      }
 	    p     { display: table-row;  }
