Added interval graph coloring algorithm
The interval graph coloring algorithm seems to work about as well as the
other ones, but the resulting layout is maybe a bit nicer to look at. I
updated the graph coloring example visualization to show the differences
in each layout algorithm.

--- a/examples/graph-color-layout/index.html
+++ b/examples/graph-color-layout/index.html
@@ -39,6 +39,8 @@
 <body>
     <div id="axis-chart" class="axis"></div>
     <div id="track-chart" class="chart"></div>
+    <div id="track-chart2" class="chart"></div>
+    <div id="track-chart3" class="chart"></div>
     <script src="main.js"></script>
 
 </body>
