--- a/examples/plot-example/index.html
+++ b/examples/plot-example/index.html
@@ -32,9 +32,11 @@
     </style>
 </head>
 <body>
-    <div id="axis-chart" class="axis"></div>
-    <div id="track-chart" class="chart"></div>
-    <script src="main.js"></script>
+    <div id='axis-chart' class='axis'></div>
+    <div id='line-chart' class='chart'></div>
+    <div id='bar-chart' class='chart'></div>
+    <div id='heatmap-chart' class='chart'></div>
+    <script src='main.js'></script>
 
 </body>
 </html>
