Huge reorganization of the examples

--- a/examples/bed/index.html
+++ b/examples/bed/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>soda example - click and hover</title>
+    <title>soda example - bed</title>
 </head>
 <body>
     <div id="axis-chart" class="axis"></div>
