--- a/examples/index.html
+++ b/examples/index.html
@@ -24,7 +24,7 @@
         <div class="w3-col l3 m6 w3-margin-bottom">
             <div class="w3-display-container">
                 <div>
-                    <a href="single-track-rectangles/index.html" class="w3-bar-item w3-button"><b>Single track rectangles</b></a>
+                    <a href="rectangles/index.html" class="w3-bar-item w3-button"><b>Single track rectangles</b></a>
                 </div>
             </div>
         </div>
@@ -38,7 +38,7 @@
         <div class="w3-col l3 m6 w3-margin-bottom">
             <div class="w3-display-container">
                 <div>
-                    <a href="graph-color-layout/index.html" class="w3-bar-item w3-button"><b>Graph color layout</b></a>
+                    <a href="layout/index.html" class="w3-bar-item w3-button"><b>Graph color layout</b></a>
                 </div>
             </div>
         </div>
