--- a/examples/gff3/index.html
+++ b/examples/gff3/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>soda example - click and hover</title>
-</head>
+    <title>soda example - gff3</title>
 <body>
     <div id="axis-chart" class="axis"></div>
     <div id="track-chart" class="chart"></div>
